# conserve

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Pulumi.yaml  README.md  buf.gen.yaml  buf.yaml  pixi.toml  pulumi-mapping.json  pyproject.toml  test.py
.conserve/: conserve_bootstrap.py  conserve_example.py
docs/: handle-extension-design.md  package-module-spec.md  truth-module-design.md
scripts/: gen_models.py
spec/: spec.md
src/conserve/: __init__.py  cli.py  config.py  core.py  discovery.py  file.py  plan.py  text.py  utils.py
src/conserve/_generated/deps_dev/v3/: __init__.py
src/conserve/_generated/google/api/: __init__.py
src/conserve/_generated/google/protobuf/: __init__.py
src/conserve/model/: claude_code_settings.py  pixitoml.py
src/conserve/package/: __init__.py  conda.py  deps_dev_provider.py  github_provider.py  package.py  provider.py  types.py
src/conserve/truth/: __init__.py  conda.py  schemastore.py  utils.py
tests/: conftest.py  test_e2e.py  test_package.py  test_truth_conda.py
