[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conserve"
version = "0.1.0"
description = "Configuration fragment synchronizer with format preservation"
authors = [{ name = "fecet", email = "xiezej@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "deepmerge",
  "msgspec",
  "ruamel.yaml",
  "tomlkit",
  "tyro",
  "packaging",
]

[project.scripts]
conserve = "conserve.cli:main"

[project.urls]
Repository = "https://github.com/fecet/conserve"
Issues = "https://github.com/fecet/conserve/issues"


[tool.hatch.build.targets.wheel]
packages = ["src/conserve"]
[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require external resources (network, APIs)"
]
timeout = 30
timeout_method = "thread"

[tool.ruff]
line-length = 120
target-version = "py312"
